<resources>
    <string name="app_name">YTS</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <string name="yts_website">https://yts.mx/</string>
    <string name="yts_movies">https://yts.mx/browse-movies</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="clear_downloads">Clear Downloads</string>
    <string name="delete">Delete</string>
    <string name="delete_downloads">Delete Downloads</string>
</resources>